--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -24,3 +24,12 @@ $typographies: (
         font-weight: 600
     )
 );
+
+@keyframes roll {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(180deg);
+    }
+}
